# hermes

./: .env.example  .gitignore  README.md  package-lock.json  package.json  podman-compose.yml  run_checks.sh  start_dev.sh  start_hermes.sh  sync_registry.py  verify_registry.py
.github/workflows/: ci.yml
docs/: AI_CODER_INSTRUCTIONS.md  API_REFERENCE.md  CLOUDFLARE_R2_SETUP.md  GETTING_STARTED.md  ORACLE_OBJECT_STORAGE_SETUP.md  ROADMAP.md  architecture.md  project_status.md
docs/design_instructions/: DESIGN_SYSTEM.md
docs/plans/: talib_integration.md
hermes-backend/: .coverage  Containerfile  README.md  data_seeder.py  main.py  middleware.py  pyproject.toml  requirements.txt  test_api.py
hermes-backend/api/: models.py  routes.py
hermes-backend/engine/: core.py  event_bus.py  event_engine.py  events.py  execution.py  loader.py  mtf_utils.py  portfolio.py  strategy.py
hermes-backend/scripts/: process_instruments.py  run_backtest.py
hermes-backend/services/: backtest_service.py  market_data_service.py  metrics_service.py  scanner_service.py
hermes-backend/strategies/: __init__.py  bollinger.py  macd.py  mtf_trend_following.py  rsi.py  sma_cross.py
hermes-backend/tests/: conftest.py  test_api_routes.py  test_backtest_service.py  test_core.py  test_event_engine.py  test_loader.py  test_mtf.py  test_mtf_logic.py  test_portfolio_manager.py  test_quant_framework.py  test_rsi_event_mode.py  test_scanner_service.py  test_strategies.py  test_strategies_all.py
hermes-backend/utils/: __init__.py
hermes-data/: README.md  pyproject.toml
hermes-data/src/hermes_data/: __init__.py  config.py  logging.py  service.py
hermes-data/src/hermes_data/cache/: __init__.py  base.py  memory.py  postgres.py
hermes-data/src/hermes_data/providers/: __init__.py  base.py  local.py  s3.py
hermes-data/src/hermes_data/registry/: __init__.py  database.py  models.py  service.py
hermes-data/tests/: conftest.py  test_cache.py  test_local_provider.py  test_logging.py  test_postgres_cache.py  test_registry.py  test_registry_comprehensive.py  test_s3_provider.py  test_service.py  test_service_comprehensive.py
hermes-frontend/: .prettierignore  Containerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.setup.ts
hermes-frontend/coverage/: coverage-final.json  index.html
hermes-frontend/coverage/components/backtest/: StrategyConfigPanel.tsx.html  index.html
hermes-frontend/coverage/components/dashboard/: AdvancedSettingsDialog.tsx.html  DashboardHeader.tsx.html  index.html
hermes-frontend/coverage/components/ui/: button.tsx.html  card.tsx.html  dialog.tsx.html  index.html  (+6 more)
hermes-frontend/coverage/lib/: index.html  utils.ts.html
hermes-frontend/coverage/pages/: BacktestPage.tsx.html  index.html
hermes-frontend/src/: App.tsx  index.css  main.tsx  types.ts
hermes-frontend/src/components/: ChartComponent.tsx  ChartControls.tsx  CountUp.tsx  MetricCard.tsx
hermes-frontend/src/hooks/: useBacktest.ts
hermes-frontend/src/pages/: BacktestPage.test.tsx  BacktestPage.tsx  MarketPage.tsx  PortfolioPage.tsx  SettingsPage.tsx
hermes-frontend/src/services/: api.test.ts  api.ts
hermes-ingest/: README.md  pyproject.toml
hermes-ingest/src/hermes_ingest/: __init__.py  cli.py  config.py  orchestrator.py  progress.py
hermes-ingest/src/hermes_ingest/sinks/: __init__.py  base.py  cloudflare_r2.py  factory.py  local.py  oracle_object_storage.py
hermes-ingest/src/hermes_ingest/sources/: __init__.py  base.py  zerodha.py
hermes-ingest/tests/: conftest.py  test_cli.py  test_cloudflare_r2_sink.py  test_config.py  test_local_sink.py  test_oracle_object_storage_sink.py  test_orchestrator.py  test_sink_factory.py  test_zerodha.py
(+20 files in other folders)
